# datomworld

./: .cljfmt.edn  .cljstyle  .gitignore  .projectile  .zprintrc  CLAUDE.md  Cargo.toml  MEMORY.md  README.md  bb.edn  clean.sh  config.clj  demo_python.clj  demo_yang.clj  deps.edn  foo.clj  mise.toml  nginx.conf  package-lock.json  package.json  project.clj  pubspec.yaml  redeploy.sh  release.sh  run-node-benchmark.sh  shadow-cljs.edn  vllm.sh
.dart_tool/: package_config.json  package_config_subset
.gemini/: settings.json
android/: gradle.properties  settings.gradle.kts
docs/: agy-test.md  architecture-yin-ast-to-daodb.md  astwalker-optimization.md  benchmark.md  blogs-todo.md  bootstrap.md  bytecode-vm-optimization.md  cesk-space-optimization.md  co-routines.md  code-quality.md  cross-language-macro.md  dao-repl.md  dao.space.stigmergy.md  datomic.md  ffi.md  lsp-design.md  macros.md  opencode.md  postgraphics.refactor.md  postgres.md  refactor-datascript-dependencies.md  register-stack-continuation-refactor.md  register-stack-vms-stream-refactor.md  register-vm-optimization.md  register-vm.md  semantic-vm-optimization.md  stream-design.md  thetao.md  vm-benchmark-report.md  vm-review.md  vm-todo.md  wasm-vm.md  ws-demo.md  yin-defmacro.md  yin-refactor-dao-flow.md  yin-repl.md
examples/: pi-calculus-patterns.clj  stream_verify.clj
integration_test/: simple_test.dart
lib/: main.dart
linux/: CMakeLists.txt
public/: index.html  telemetry-viewer.html  yin.html
rust/: Cargo.toml
rust_builder/: pubspec.yaml
test/: README.md  widget_test.dart
(+732 files in other folders)
